--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <p class="subtitle">Введи эмодзи и получи уникальную историю!</p>
         
         <div class="info-badge">
-            💡 Демо-версия: истории создаются на основе твоих эмодзи
+            💡 Демо-версия
         </div>
 
         <div class="emoji-input-container">
@@ -614,4 +614,5 @@
         });
     </script>
 </body>
+
 </html>
